use templated jupyter notebooks

--- a/session0/complete/session0.ipynb
+++ b/session0/complete/session0.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "############## PLEASE RUN THIS CELL FIRST! ###################\n",
+    "\n",
+    "# import everything and define a test runner function\n",
+    "from importlib import reload\n",
+    "from helper import run\n",
+    "import helper"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -11,12 +25,12 @@
     "print('hello world')\n",
     "```\n",
     "\n",
-    "You can execute by pressing shift-enter. Try it! You can also click the Run button in the toolbar."
+    "You can execute by pressing shift-enter. Try it! You can also click the Run button in the toolbar.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,58 +46,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### You can do a lot more than just print \"hello world\"\n",
-    "\n",
-    "This is a fully functioning Python3 interpreter so you can write functions and objects like in the next box.\n",
-    "\n",
-    "Try printing the 21st Fibonacci number below instead of the 11th. You can add caching if you want to practice coding in Python."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10946\n"
-     ]
-    }
-   ],
-   "source": [
-    "def fib(n):\n",
-    "    if n in (0,1):\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return fib(n-1) + fib(n-2)\n",
-    "\n",
-    "print(fib(20))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### A few things you should remember in Python3\n",
-    "\n",
-    "Strings and bytes are now different\n",
-    "\n",
-    "```python\n",
-    "s = 'hello world'\n",
-    "b = b'hello world'\n",
-    "```\n",
-    "\n",
-    "These may look the same but the 'b' prefix means that one is bytes. Basically, the on-disk characters on the system are bytes and the actual symbols in unicode are strings. A good explanation of the difference is [here](http://www.diveintopython3.net/strings.html)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -99,16 +63,90 @@
    "source": [
     "s = 'hello world'\n",
     "b = b'hello world'\n",
-    "\n",
     "print(s==b) # False\n",
-    "\n",
     "# You convert from string to bytes this way:\n",
-    "\n",
     "hello_world_bytes = s.encode('ascii')\n",
     "print(hello_world_bytes == b) # True\n",
-    "\n",
     "# You convert from bytes to string this way:\n",
+    "hello_world_string = b.decode('ascii')\n",
+    "print(hello_world_string == s) # True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 1\n",
+    "You can do a lot more than just print \"hello world\"\n",
     "\n",
+    "This is a fully functioning Python3 interpreter so you can write functions and objects like in the next box.\n",
+    "\n",
+    "Try printing the 21st Fibonacci number below instead of the 11th. You can add caching if you want to practice coding in Python.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10946\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 1\n",
+    "\n",
+    "def fib(n):\n",
+    "    if n in (0,1):\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return fib(n-1) + fib(n-2)\n",
+    "print(fib(20))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A few things you should remember in Python 3\n",
+    "\n",
+    "Strings and bytes are now different\n",
+    "\n",
+    "```python\n",
+    "s = 'hello world'\n",
+    "b = b'hello world'\n",
+    "```\n",
+    "\n",
+    "These may look the same but the 'b' prefix means that the variable `b` is bytes whereas the variable `s` is a string. Basically, the on-disk characters on the system are bytes and the actual symbols in unicode are strings. A good explanation of the difference is [here](http://www.diveintopython3.net/strings.html).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 'hello world'\n",
+    "b = b'hello world'\n",
+    "print(s==b) # False\n",
+    "# You convert from string to bytes this way:\n",
+    "hello_world_bytes = s.encode('ascii')\n",
+    "print(hello_world_bytes == b) # True\n",
+    "# You convert from bytes to string this way:\n",
     "hello_world_string = b.decode('ascii')\n",
     "print(hello_world_string == s) # True"
    ]
@@ -122,26 +160,20 @@
     "You already have unit tests that are written for you.\n",
     "Your task is to make them pass.\n",
     "We can import various modules to make our experience using Jupyter more pleasant.\n",
-    "This way, making everything work will be a lot easier."
+    "This way, making everything work will be a lot easier.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import everything and define a test runner function\n",
-    "from importlib import reload\n",
-    "from helper import run\n",
-    "\n",
     "# this is how you import an entire module\n",
     "import helper\n",
-    "\n",
     "# this is how you import a particular function, class or constant\n",
     "from helper import little_endian_to_int\n",
-    "\n",
-    "# used in the next tip\n",
+    "# used in the next exercise\n",
     "some_long_variable_name = 'something'"
    ]
   },
@@ -149,40 +181,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Jupyter Tips\n",
+    "### Exercise 2\n",
+    "#### Jupyter Tips\n",
     "\n",
-    "#### The two most useful things are tab and shift-tab\n",
+    "The two most useful commands are tab and shift-tab\n",
     "\n",
     "Tab lets you tab-complete. Try pressing tab after the `some` below. This will complete to the variable name that's there from the last cell.\n",
     "\n",
-    "Shift-Tab gives you a function/method signature. Try pressing shift-tab after the `little_endian_to_int` below. That's also there from the last cell."
+    "Shift-Tab gives you a function/method signature. Try pressing shift-tab after the `little_endian_to_int` below. That's also there from the last cell.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "some_\n",
+    "# Exercise 2\n",
     "\n",
-    "little_endian_to_int()"
+    "some_long_variable_name\n",
+    "little_endian_to_int(b'\\x00')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 1\n",
+    "### Exercise 3\n",
     "\n",
-    "Make [this test](/edit/session0/helper.py) pass: `helper.py:HelperTest:test_bytes`\n",
     "\n",
-    "In order to do this, you'll have to open helper.py and implement the bytes_to_str and str_to_bytes functions. Once you're done editing [helper.py](/edit/session0/helper.py), run this again. Try it now!"
+    "Open [helper.py](/edit/session0/helper.py) and implement the `bytes_to_str` and `str_to_bytes` functions. Once you're done editing, run the cell below.\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session0/helper.py) pass: `helper.py:HelperTest:test_bytes`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -198,10 +245,9 @@
     }
    ],
    "source": [
-    "# Exercise 1\n",
+    "# Exercise 3\n",
     "\n",
     "reload(helper)\n",
-    "\n",
     "run(helper.HelperTest('test_bytes'))"
    ]
   },
@@ -211,7 +257,7 @@
    "source": [
     "### Getting Help\n",
     "\n",
-    "If you can't get this, there's a `complete` directory that has the `helper.py` file and the `session0.ipynb` file which you can use to get the answers."
+    "If you can't get this, there's a [complete directory](/tree/session0/complete) that has the [helper.py file](/edit/session0/complete/helper.py) and the [session0.ipynb file](/notebooks/session0/complete/session0.ipynb) which you can use to get the answers.\n"
    ]
   },
   {
@@ -239,32 +285,41 @@
     "Indexing bytes will get you the numerical value:\n",
     "\n",
     "```python\n",
-    "print(b'&'[0]) # 38 since & is charcter #38 \n",
+    "print(b'&'[0]) # 38 since & is charcter #38\n",
     "```\n",
     "\n",
     "You can do the reverse by using bytes:\n",
     "\n",
     "```python\n",
     "print(bytes([38])) # b'&'\n",
-    "```"
+    "```\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 2, 1]\n",
+      "dlrow olleh\n",
+      "b'dlrow olleh'\n",
+      "38\n",
+      "b'&'\n"
+     ]
+    }
+   ],
    "source": [
     "a = [1, 2, 3, 4, 5]\n",
     "print(a[::-1]) # [5, 4, 3, 2, 1]\n",
-    "\n",
     "s = 'hello world'\n",
     "print(s[::-1]) # 'dlrow olleh'\n",
     "b = b'hello world'\n",
     "print(b[::-1]) # b'dlrow olleh'\n",
-    "\n",
     "print(b'&'[0]) # 38 since & charcter #38\n",
-    "\n",
     "print(bytes([38])) # b'&'"
    ]
   },
@@ -274,14 +329,23 @@
    "source": [
     "### Python Tricks\n",
     "\n",
-    "Here is how we convert binary to/from hex:"
+    "Here is how we convert binary to/from hex:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68656c6c6f20776f726c64\n",
+      "b'hello world'\n"
+     ]
+    }
+   ],
    "source": [
     "print(b'hello world'.hex())\n",
     "print(bytes.fromhex('68656c6c6f20776f726c64'))"
@@ -291,29 +355,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 2\n",
-    "\n",
+    "### Exercise 4\n",
     "Reverse this hex dump: `b010a49c82b4bc84cc1dfd6e09b2b8114d016041efaf591eca88959e327dd29a`\n",
     "\n",
-    "Hint: you'll want to turn this into binary data, reverse and turn it into hex again"
+    "Hint: you'll want to turn this into binary data, reverse and turn it into hex again\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9ad27d329e9588ca1e59afef4160014d11b8b2096efd1dcc84bcb4829ca410b0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Exercise 2\n",
+    "# Exercise 4\n",
     "\n",
     "h = 'b010a49c82b4bc84cc1dfd6e09b2b8114d016041efaf591eca88959e327dd29a'\n",
-    "\n",
     "# convert to binary (bytes.fromhex)\n",
     "b = bytes.fromhex(h)\n",
     "# reverse ([::-1])\n",
     "b_rev = b[::-1]\n",
     "# convert to hex()\n",
     "h_rev = b_rev.hex()\n",
+    "# print the result\n",
     "print(h_rev)"
    ]
   },
@@ -337,14 +408,22 @@
     "\n",
     "Think of taking the modulo as asking the question \"what hour will it be 39 hours from now?\"\n",
     "\n",
-    "If you're still confused, please take a look at [this](https://www.khanacademy.org/computing/computer-science/cryptography/modarithmetic/a/what-is-modular-arithmetic) article."
+    "If you're still confused, please take a look at [this](https://www.khanacademy.org/computing/computer-science/cryptography/modarithmetic/a/what-is-modular-arithmetic) article.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "print(39 % 12)"
    ]
@@ -353,7 +432,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 3\n",
+    "### Exercise 5\n",
     "\n",
     "Find the modulo 19 of these numbers:\n",
     "\n",
@@ -361,16 +440,26 @@
     "* \\\\(456 \\cdot 444\\\\)\n",
     "* \\\\(9^{77}\\\\)\n",
     "\n",
-    "(note python uses ** to do exponentiation)"
+    "(note python uses ** to do exponentiation)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "0\n",
+      "16\n"
+     ]
+    }
+   ],
    "source": [
-    "# Exercise 3\n",
+    "# Exercise 5\n",
     "\n",
     "prime = 19\n",
     "print(99 % prime)\n",
@@ -411,22 +500,32 @@
     "n = int.from_bytes(big_endian, 'big')  # 1234567890\n",
     "little_endian = b'\\xd2\\x02\\x96\\x49'\n",
     "n = int.from_bytes(little_endian, 'little')  # 1234567890\n",
-    "```"
+    "```\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "499602d2\n",
+      "d2029649\n",
+      "1234567890\n",
+      "1234567890\n"
+     ]
+    }
+   ],
    "source": [
     "n = 1234567890\n",
     "big_endian = n.to_bytes(4, 'big')\n",
     "little_endian = n.to_bytes(4, 'little')\n",
-    "\n",
     "print(big_endian.hex())\n",
     "print(little_endian.hex())\n",
-    "\n",
     "print(int.from_bytes(big_endian, 'big'))\n",
     "print(int.from_bytes(little_endian, 'little'))"
    ]
@@ -435,46 +534,107 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 4\n",
+    "### Exercise 6\n",
+    "Convert the following:\n",
     "\n",
-    "1. Convert the following:\n",
-    "\n",
-    " * 8675309 to 8 bytes in big endian\n",
-    " * interpret ```b'\\x11\\x22\\x33\\x44\\x55'``` as a little endian integer\n",
-    "\n",
-    "2. Make the following tests pass:\n",
-    "\n",
-    "```\n",
-    "helper.py:test_little_endian_to_int\n",
-    "helper.py:test_int_to_little_endian\n",
-    "```"
+    "* 8675309 to 8 bytes in big endian\n",
+    "* interpret ```b'\\x11\\x22\\x33\\x44\\x55'``` as a little endian integer\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\x00\\x00\\x00\\x00\\x00\\x84_\\xed'\n",
+      "366216421905\n"
+     ]
+    }
+   ],
    "source": [
-    "# Exercise 4.1\n",
+    "# Exercise 6\n",
     "\n",
     "n = 8675309\n",
     "print(n.to_bytes(8, 'big'))\n",
-    "\n",
     "little_endian = b'\\x11\\x22\\x33\\x44\\x55'\n",
     "print(int.from_bytes(little_endian, 'little'))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Exercise 4.2\n",
+    "### Exercise 7\n",
+    "\n",
+    "\n",
+    "We'll want to convert from little-endian bytes to an integer often, so write a function that will do this.\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session0/helper.py) pass: `helper.py:HelperTest:test_little_endian_to_int`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 7\n",
     "\n",
     "reload(helper)\n",
-    "run(helper.HelperTest('test_little_endian_to_int'))\n",
+    "run(helper.HelperTest('test_little_endian_to_int'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 8\n",
+    "\n",
+    "\n",
+    "Similarly, we'll want to do the inverse operation, so write a function that will convert an integer to little-endian bytes given the number and the number of bytes it should take up.\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session0/helper.py) pass: `helper.py:HelperTest:test_int_to_little_endian`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 8\n",
+    "\n",
+    "reload(helper)\n",
     "run(helper.HelperTest('test_int_to_little_endian'))"
    ]
   }
@@ -495,7 +655,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
