--- a/session0/session0.ipynb
+++ b/session0/session0.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "############## PLEASE RUN THIS CELL FIRST! ###################\n",
+    "\n",
+    "# import everything and define a test runner function\n",
+    "from importlib import reload\n",
+    "from helper import run\n",
+    "import helper"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -11,7 +25,7 @@
     "print('hello world')\n",
     "```\n",
     "\n",
-    "You can execute by pressing shift-enter. Try it! You can also click the Run button in the toolbar."
+    "You can execute by pressing shift-enter. Try it! You can also click the Run button in the toolbar.\n"
    ]
   },
   {
@@ -24,14 +38,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = 'hello world'\n",
+    "b = b'hello world'\n",
+    "print(s==b) # False\n",
+    "# You convert from string to bytes this way:\n",
+    "hello_world_bytes = s.encode('ascii')\n",
+    "print(hello_world_bytes == b) # True\n",
+    "# You convert from bytes to string this way:\n",
+    "hello_world_string = b.decode('ascii')\n",
+    "print(hello_world_string == s) # True"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### You can do a lot more than just print \"hello world\"\n",
+    "### Exercise 1\n",
+    "You can do a lot more than just print \"hello world\"\n",
     "\n",
     "This is a fully functioning Python3 interpreter so you can write functions and objects like in the next box.\n",
     "\n",
-    "Try printing the 21st Fibonacci number below instead of the 11th. You can add caching if you want to practice coding in Python."
+    "Try printing the 21st Fibonacci number below instead of the 11th. You can add caching if you want to practice coding in Python.\n"
    ]
   },
   {
@@ -40,20 +72,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Exercise 1\n",
+    "\n",
     "def fib(n):\n",
     "    if n in (0,1):\n",
     "        return 1\n",
     "    else:\n",
     "        return fib(n-1) + fib(n-2)\n",
-    "\n",
-    "print(fib(10))"
+    "print(fib(10))  # CHANGE THIS LINE"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A few things you should remember in Python3\n",
+    "### A few things you should remember in Python 3\n",
     "\n",
     "Strings and bytes are now different\n",
     "\n",
@@ -62,7 +95,7 @@
     "b = b'hello world'\n",
     "```\n",
     "\n",
-    "These may look the same but the 'b' prefix means that the variable `b` is bytes whereas the variable `s` is a string. Basically, the on-disk characters on the system are bytes and the actual symbols in unicode are strings. A good explanation of the difference is [here](http://www.diveintopython3.net/strings.html)."
+    "These may look the same but the 'b' prefix means that the variable `b` is bytes whereas the variable `s` is a string. Basically, the on-disk characters on the system are bytes and the actual symbols in unicode are strings. A good explanation of the difference is [here](http://www.diveintopython3.net/strings.html).\n"
    ]
   },
   {
@@ -73,16 +106,11 @@
    "source": [
     "s = 'hello world'\n",
     "b = b'hello world'\n",
-    "\n",
     "print(s==b) # False\n",
-    "\n",
     "# You convert from string to bytes this way:\n",
-    "\n",
     "hello_world_bytes = s.encode('ascii')\n",
     "print(hello_world_bytes == b) # True\n",
-    "\n",
     "# You convert from bytes to string this way:\n",
-    "\n",
     "hello_world_string = b.decode('ascii')\n",
     "print(hello_world_string == s) # True"
    ]
@@ -96,7 +124,7 @@
     "You already have unit tests that are written for you.\n",
     "Your task is to make them pass.\n",
     "We can import various modules to make our experience using Jupyter more pleasant.\n",
-    "This way, making everything work will be a lot easier."
+    "This way, making everything work will be a lot easier.\n"
    ]
   },
   {
@@ -105,17 +133,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import everything and define a test runner function\n",
-    "from importlib import reload\n",
-    "from helper import run\n",
-    "\n",
     "# this is how you import an entire module\n",
     "import helper\n",
-    "\n",
     "# this is how you import a particular function, class or constant\n",
     "from helper import little_endian_to_int\n",
-    "\n",
-    "# used in the next tip\n",
+    "# used in the next exercise\n",
     "some_long_variable_name = 'something'"
    ]
   },
@@ -123,13 +145,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Jupyter Tips\n",
+    "### Exercise 2\n",
+    "#### Jupyter Tips\n",
     "\n",
-    "#### The two most useful things are tab and shift-tab\n",
+    "The two most useful commands are tab and shift-tab\n",
     "\n",
     "Tab lets you tab-complete. Try pressing tab after the `some` below. This will complete to the variable name that's there from the last cell.\n",
     "\n",
-    "Shift-Tab gives you a function/method signature. Try pressing shift-tab after the `little_endian_to_int` below. That's also there from the last cell."
+    "Shift-Tab gives you a function/method signature. Try pressing shift-tab after the `little_endian_to_int` below. That's also there from the last cell.\n"
    ]
   },
   {
@@ -138,20 +161,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "some\n",
+    "# Exercise 2\n",
     "\n",
-    "little_endian_to_int()"
+    "some  # press *tab* here\n",
+    "little_endian_to_int()  # press shift-tab here"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 1\n",
+    "### Exercise 3\n",
     "\n",
-    "Make [this test](/edit/session0/helper.py) pass: `helper.py:HelperTest:test_bytes`\n",
     "\n",
-    "In order to do this, you'll have to open helper.py and implement the bytes_to_str and str_to_bytes functions. Once you're done editing [helper.py](/edit/session0/helper.py), run this again. Try it now!"
+    "Open [helper.py](/edit/session0/helper.py) and implement the `bytes_to_str` and `str_to_bytes` functions. Once you're done editing, run the cell below.\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session0/helper.py) pass: `helper.py:HelperTest:test_bytes`"
    ]
   },
   {
@@ -160,10 +186,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 1\n",
+    "# Exercise 3\n",
     "\n",
     "reload(helper)\n",
-    "\n",
     "run(helper.HelperTest('test_bytes'))"
    ]
   },
@@ -173,7 +198,7 @@
    "source": [
     "### Getting Help\n",
     "\n",
-    "If you can't get this, there's a `complete` directory that has the `helper.py` file and the `session0.ipynb` file which you can use to get the answers."
+    "If you can't get this, there's a [complete directory](/tree/session0/complete) that has the [helper.py file](/edit/session0/complete/helper.py) and the [session0.ipynb file](/notebooks/session0/complete/session0.ipynb) which you can use to get the answers.\n"
    ]
   },
   {
@@ -201,14 +226,14 @@
     "Indexing bytes will get you the numerical value:\n",
     "\n",
     "```python\n",
-    "print(b'&'[0]) # 38 since & is charcter #38 \n",
+    "print(b'&'[0]) # 38 since & is charcter #38\n",
     "```\n",
     "\n",
     "You can do the reverse by using bytes:\n",
     "\n",
     "```python\n",
     "print(bytes([38])) # b'&'\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -219,14 +244,11 @@
    "source": [
     "a = [1, 2, 3, 4, 5]\n",
     "print(a[::-1]) # [5, 4, 3, 2, 1]\n",
-    "\n",
     "s = 'hello world'\n",
     "print(s[::-1]) # 'dlrow olleh'\n",
     "b = b'hello world'\n",
     "print(b[::-1]) # b'dlrow olleh'\n",
-    "\n",
     "print(b'&'[0]) # 38 since & charcter #38\n",
-    "\n",
     "print(bytes([38])) # b'&'"
    ]
   },
@@ -236,7 +258,7 @@
    "source": [
     "### Python Tricks\n",
     "\n",
-    "Here is how we convert binary to/from hex:"
+    "Here is how we convert binary to/from hex:\n"
    ]
   },
   {
@@ -253,11 +275,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 2\n",
-    "\n",
+    "### Exercise 4\n",
     "Reverse this hex dump: `b010a49c82b4bc84cc1dfd6e09b2b8114d016041efaf591eca88959e327dd29a`\n",
     "\n",
-    "Hint: you'll want to turn this into binary data, reverse and turn it into hex again"
+    "Hint: you'll want to turn this into binary data, reverse and turn it into hex again\n"
    ]
   },
   {
@@ -266,13 +287,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 2\n",
+    "# Exercise 4\n",
     "\n",
     "h = 'b010a49c82b4bc84cc1dfd6e09b2b8114d016041efaf591eca88959e327dd29a'\n",
-    "\n",
     "# convert to binary (bytes.fromhex)\n",
+    "\n",
     "# reverse ([::-1])\n",
-    "# convert to hex()"
+    "\n",
+    "# convert to hex()\n",
+    "\n",
+    "# print the result\n"
    ]
   },
   {
@@ -295,7 +319,7 @@
     "\n",
     "Think of taking the modulo as asking the question \"what hour will it be 39 hours from now?\"\n",
     "\n",
-    "If you're still confused, please take a look at [this](https://www.khanacademy.org/computing/computer-science/cryptography/modarithmetic/a/what-is-modular-arithmetic) article."
+    "If you're still confused, please take a look at [this](https://www.khanacademy.org/computing/computer-science/cryptography/modarithmetic/a/what-is-modular-arithmetic) article.\n"
    ]
   },
   {
@@ -311,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 3\n",
+    "### Exercise 5\n",
     "\n",
     "Find the modulo 19 of these numbers:\n",
     "\n",
@@ -319,7 +343,7 @@
     "* \\\\(456 \\cdot 444\\\\)\n",
     "* \\\\(9^{77}\\\\)\n",
     "\n",
-    "(note python uses ** to do exponentiation)"
+    "(note python uses ** to do exponentiation)\n"
    ]
   },
   {
@@ -328,9 +352,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 3\n",
+    "# Exercise 5\n",
     "\n",
-    "prime = 19"
+    "prime = 19\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -366,7 +392,8 @@
     "n = int.from_bytes(big_endian, 'big')  # 1234567890\n",
     "little_endian = b'\\xd2\\x02\\x96\\x49'\n",
     "n = int.from_bytes(little_endian, 'little')  # 1234567890\n",
-    "```"
+    "```\n",
+    "\n"
    ]
   },
   {
@@ -378,10 +405,8 @@
     "n = 1234567890\n",
     "big_endian = n.to_bytes(4, 'big')\n",
     "little_endian = n.to_bytes(4, 'little')\n",
-    "\n",
     "print(big_endian.hex())\n",
     "print(little_endian.hex())\n",
-    "\n",
     "print(int.from_bytes(big_endian, 'big'))\n",
     "print(int.from_bytes(little_endian, 'little'))"
    ]
@@ -390,19 +415,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 4\n",
+    "### Exercise 6\n",
+    "Convert the following:\n",
     "\n",
-    "1. Convert the following:\n",
-    "\n",
-    " * 8675309 to 8 bytes in big endian\n",
-    " * interpret ```b'\\x11\\x22\\x33\\x44\\x55'``` as a little endian integer\n",
-    "\n",
-    "2. Make the following tests pass:\n",
-    "\n",
-    "```\n",
-    "helper.py:test_little_endian_to_int\n",
-    "helper.py:test_int_to_little_endian\n",
-    "```"
+    "* 8675309 to 8 bytes in big endian\n",
+    "* interpret ```b'\\x11\\x22\\x33\\x44\\x55'``` as a little endian integer\n"
    ]
   },
   {
@@ -411,10 +428,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 4.1\n",
+    "# Exercise 6\n",
     "\n",
     "n = 8675309\n",
-    "little_endian = b'\\x11\\x22\\x33\\x44\\x55'"
+    "\n",
+    "little_endian = b'\\x11\\x22\\x33\\x44\\x55'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 7\n",
+    "\n",
+    "\n",
+    "We'll want to convert from little-endian bytes to an integer often, so write a function that will do this.\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session0/helper.py) pass: `helper.py:HelperTest:test_little_endian_to_int`"
    ]
   },
   {
@@ -423,33 +454,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 4.2\n",
+    "# Exercise 7\n",
     "\n",
     "reload(helper)\n",
-    "run(helper.HelperTest('test_little_endian_to_int'))\n",
+    "run(helper.HelperTest('test_little_endian_to_int'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 8\n",
+    "\n",
+    "\n",
+    "Similarly, we'll want to do the inverse operation, so write a function that will convert an integer to little-endian bytes given the number and the number of bytes it should take up.\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session0/helper.py) pass: `helper.py:HelperTest:test_int_to_little_endian`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 8\n",
+    "\n",
+    "reload(helper)\n",
     "run(helper.HelperTest('test_int_to_little_endian'))"
    ]
   }
  ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 2
 }
