--- a/session1/session1.ipynb
+++ b/session1/session1.ipynb
@@ -6,13 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "############## PLEASE RUN THIS CELL FIRST! ###################\n",
+    "\n",
     "# import everything and define a test runner function\n",
     "from importlib import reload\n",
-    "from random import randint\n",
-    "\n",
+    "from helper import run\n",
     "import ecc, helper\n",
-    "\n",
-    "from helper import run"
+    "from random import randint"
    ]
   },
   {
@@ -22,7 +22,6 @@
    "outputs": [],
    "source": [
     "# Addition/Subtraction example\n",
-    "\n",
     "print((11 + 6) % 19)\n",
     "print((17 - 11) % 19)\n",
     "print((8 + 14) % 19)\n",
@@ -34,21 +33,13 @@
    "metadata": {},
    "source": [
     "### Exercise 1\n",
-    "\n",
-    "Remember the % operator does the actual modulo operation. Also remember that `+` and `-` need to be in `()` because in the order of operations `%` comes before `+` and `-`.\n",
-    "\n",
-    "#### 1.1. Solve these equations in \\\\(F_{31}\\\\):\n",
-    "\n",
+    "Solve these equations in \\\\(F_{31}\\\\):\n",
     "* \\\\(2+15=?\\\\)\n",
     "* \\\\(17+21=?\\\\)\n",
     "* \\\\(29-4=?\\\\)\n",
     "* \\\\(15-30=?\\\\)\n",
     "\n",
-    "#### 1.2. Make [these tests](/edit/session1/ecc.py) pass:\n",
-    "```\n",
-    "ecc.py:FieldElementTest:test_add\n",
-    "ecc.py:FieldElementTest:test_sub\n",
-    "```"
+    "Remember the % operator does the actual modulo operation. Also remember that `+` and `-` need to be in `()` because in the order of operations `%` comes before `+` and `-`.\n"
    ]
   },
   {
@@ -57,14 +48,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 1.1\n",
+    "# Exercise 1\n",
     "\n",
     "# remember that % is the modulo operator\n",
     "prime = 31\n",
     "# 2+15=?\n",
+    "\n",
     "# 17+21=?\n",
+    "\n",
     "# 29-4=?\n",
-    "# 15-30=?"
+    "\n",
+    "# 15-30=?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 2\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session1/ecc.py) pass: `ecc.py:FieldElementTest:test_add`"
    ]
   },
   {
@@ -73,10 +79,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 1.2\n",
+    "# Exercise 2\n",
     "\n",
     "reload(ecc)\n",
-    "run(ecc.FieldElementTest('test_add'))\n",
+    "run(ecc.FieldElementTest('test_add'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 3\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session1/ecc.py) pass: `ecc.py:FieldElementTest:test_sub`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 3\n",
+    "\n",
+    "reload(ecc)\n",
     "run(ecc.FieldElementTest('test_sub'))"
    ]
   },
@@ -87,7 +116,6 @@
    "outputs": [],
    "source": [
     "# Multiplication/Exponentiation Example\n",
-    "\n",
     "print(2 * 4 % 19)\n",
     "print(7 * 3 % 19)\n",
     "print(11 ** 3 % 19)\n",
@@ -98,23 +126,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 2\n",
-    "\n",
-    "#### 2.1. Solve these equations in \\\\(F_{31}\\\\):\n",
-    "\n",
+    "### Exercise 4\n",
+    "Solve these equations in \\\\(F_{31}\\\\):\n",
     "* \\\\(24\\cdot19=?\\\\)\n",
     "* \\\\(17^3=?\\\\)\n",
-    "* \\\\(5^5\\cdot18=?\\\\)\n",
-    "\n",
-    "#### 2.2. Write a program to calculate \\\\(0\\cdot k, 1\\cdot k, 2\\cdot k, 3\\cdot k, ... 30\\cdot k\\\\) for some \\\\(k\\\\) in \\\\(F_{31}\\\\).  Notice anything about these sets?\n",
-    "\n",
-    "#### 2.3. Make [these tests](/edit/session1/ecc.py) pass:\n",
-    "```\n",
-    "ecc.py:FieldElementTest:test_mul\n",
-    "ecc.py:FieldElementTest:test_pow\n",
-    "```\n",
-    "\n",
-    "#### Bonus. Write a program to calculate \\\\(k^{30}\\\\) for all k in \\\\(F_{31}\\\\). Notice anything?"
+    "* \\\\(5^5\\cdot18=?\\\\)\n"
    ]
   },
   {
@@ -123,13 +139,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 2.1\n",
+    "# Exercise 4\n",
     "\n",
     "# remember that ** is the exponentiation operator\n",
     "prime = 31\n",
     "# 24*19=?\n",
+    "\n",
     "# 17^3=?\n",
-    "# 5^5*18=?"
+    "\n",
+    "# 5^5*18=?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 5\n",
+    "Write a program to calculate \\\\(0\\cdot k, 1\\cdot k, 2\\cdot k, 3\\cdot k, ... 30\\cdot k\\\\) for some \\\\(k\\\\) in \\\\(F_{31}\\\\).  Notice anything about these sets?\n"
    ]
   },
   {
@@ -138,12 +164,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 2.2\n",
+    "# Exercise 5\n",
     "\n",
+    "from random import randint\n",
     "prime = 31\n",
     "k = randint(1,prime)\n",
+    "# use range(prime) to iterate over all numbers from 0 to 30 inclusive\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 6\n",
     "\n",
-    "# use range(prime) to iterate over all numbers from 0 to 30 inclusive"
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session1/ecc.py) pass: `ecc.py:FieldElementTest:test_mul`"
    ]
   },
   {
@@ -152,24 +190,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 2.3\n",
+    "# Exercise 6\n",
     "\n",
     "reload(ecc)\n",
-    "run(ecc.FieldElementTest('test_mul'))\n",
+    "run(ecc.FieldElementTest('test_mul'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 7\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session1/ecc.py) pass: `ecc.py:FieldElementTest:test_pow`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 7\n",
+    "\n",
+    "reload(ecc)\n",
     "run(ecc.FieldElementTest('test_pow'))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 8\n",
+    "#### BONUS QUESTION, ONLY ATTEMPT IF YOU HAVE TIME\n",
+    "Write a program to calculate \\\\(k^{30}\\\\) for all k in \\\\(F_{31}\\\\). Notice anything?\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Exercise 8\n",
+    "\n",
     "# Bonus\n",
-    "\n",
     "prime = 31\n",
-    "\n",
-    "# use range(1, prime) to iterate over all numbers from 1 to 30 inclusive"
+    "# use range(1, prime) to iterate over all numbers from 1 to 30 inclusive\n"
    ]
   },
   {
@@ -179,7 +249,6 @@
    "outputs": [],
    "source": [
     "# Division Example\n",
-    "\n",
     "print(2 * 3**17 % 19)\n",
     "print(2 * pow(3, 17, 19) % 19)\n",
     "print(3 * 15**17 % 19)\n",
@@ -190,19 +259,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 3\n",
-    "\n",
-    "#### 3.1. Solve these equations in \\\\(F_{31}\\\\):\n",
-    "\n",
+    "### Exercise 9\n",
+    "Solve these equations in \\\\(F_{31}\\\\):\n",
     "* \\\\(3/24 = ?\\\\)\n",
     "* \\\\(17^{-3} = ?\\\\)\n",
-    "* \\\\(4^{-4}\\cdot{11} = ?\\\\)\n",
-    "\n",
-    "#### 3.2. Make [these tests](/edit/session1/ecc.py) pass:\n",
-    "\n",
-    "```\n",
-    "ecc.py:FieldElementTest:test_div\n",
-    "```"
+    "* \\\\(4^{-4}\\cdot{11} = ?\\\\)\n"
    ]
   },
   {
@@ -211,13 +272,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 3.1\n",
+    "# Exercise 9\n",
     "\n",
     "# remember pow(x, p-2, p) is the same as 1/x in F_p\n",
     "prime = 31\n",
     "# 3/24 = ?\n",
+    "\n",
     "# 17^(-3) = ?\n",
-    "# 4^(-4)*11 = ?"
+    "\n",
+    "# 4^(-4)*11 = ?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 10\n",
+    "\n",
+    "\n",
+    "Hint: the `__pow__` method needs a positive number for the exponent. You can mod by p-1\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session1/ecc.py) pass: `ecc.py:FieldElementTest:test_div`"
    ]
   },
   {
@@ -226,13 +302,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 3.2\n",
+    "# Exercise 10\n",
     "\n",
     "reload(ecc)\n",
-    "run(ecc.FieldElementTest('test_div'))\n",
-    "\n",
-    "# Hint: the __pow__ method needs a positive number for the exponent.\n",
-    "# You can mod by p-1"
+    "run(ecc.FieldElementTest('test_div'))"
    ]
   },
   {
@@ -242,9 +315,7 @@
    "outputs": [],
    "source": [
     "# Elliptic Curve Example\n",
-    "\n",
     "x, y = -1, -1\n",
-    "\n",
     "print(y**2 == x**3 + 5*x + 7)"
    ]
   },
@@ -252,16 +323,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 4\n",
-    "\n",
-    "#### 4.1. For the curve \\\\(y^2 = x^3 + 5x + 7\\\\), which of these are on the curve?\n",
-    "\n",
-    "\\\\((-2,4), (3,7), (18,77)\\\\)\n",
-    "\n",
-    "#### 4.2. Make [this test](/edit/session1/ecc.py) pass\n",
-    "```\n",
-    "ecc.py:PointTest:test_on_curve\n",
-    "```"
+    "### Exercise 11\n",
+    "For the curve \\\\(y^2 = x^3 + 5x + 7\\\\), which of these points are on the curve?\n",
+    "\\\\((-2,4), (3,7), (18,77)\\\\)\n"
    ]
   },
   {
@@ -270,15 +334,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 4.1\n",
+    "# Exercise 11\n",
     "\n",
     "# (-2,4), (3,7), (18,77)\n",
     "# equation in python is: y**2 == x**3 + 5*x + 7\n",
-    "\n",
     "points = ((-2,4), (3,7), (18,77))\n",
-    "\n",
     "for x, y in points:\n",
-    "    # determine whether (x,y) is on the curve"
+    "    # determine whether (x,y) is on the curve\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 12\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session1/ecc.py) pass: `ecc.py:PointTest:test_on_curve`"
    ]
   },
   {
@@ -287,7 +364,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 4.2\n",
+    "# Exercise 12\n",
     "\n",
     "reload(ecc)\n",
     "run(ecc.PointTest('test_on_curve'))"
@@ -297,12 +374,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 5\n",
+    "### Exercise 13\n",
     "\n",
-    "#### 5.1. Make [this test](/edit/session1/ecc.py) pass\n",
-    "```\n",
-    "ecc.py:PointTest:test_add0\n",
-    "```"
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session1/ecc.py) pass: `ecc.py:PointTest:test_add0`"
    ]
   },
   {
@@ -311,7 +388,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 5.1\n",
+    "# Exercise 13\n",
     "\n",
     "reload(ecc)\n",
     "run(ecc.PointTest('test_add0'))"
@@ -324,7 +401,6 @@
    "outputs": [],
    "source": [
     "# Point Addition where x1 != x2 Example\n",
-    "\n",
     "x1, y1 = (2, 5)\n",
     "x2, y2 = (3, 7)\n",
     "s = (y2-y1)/(x2-x1)\n",
@@ -337,14 +413,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 6\n",
-    "\n",
-    "#### 6.1. For the curve \\\\(y^2 = x^3 + 5x + 7\\\\), what is \\\\((2,5) + (-1,-1)\\\\)?\n",
-    "\n",
-    "#### 6.2. Make [this test](/edit/session1/ecc.py) pass\n",
-    "```\n",
-    "ecc.py:PointTest:test_add1\n",
-    "```"
+    "### Exercise 14\n",
+    "For the curve \\\\(y^2 = x^3 + 5x + 7\\\\), what is \\\\((2,5) + (-1,-1)\\\\)?\n"
    ]
   },
   {
@@ -353,16 +423,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 6.1\n",
+    "# Exercise 14\n",
     "\n",
     "x1, y1 = (2,5)\n",
     "x2, y2 = (-1,-1)\n",
     "# formula in python:\n",
     "# s = (y2-y1)/(x2-x1)\n",
+    "\n",
     "# x3 = s**2 - x2 - x1\n",
+    "\n",
     "# y3 = s*(x1-x3)-y1\n",
     "\n",
-    "# print x3, y3"
+    "# print the coordinates\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 15\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session1/ecc.py) pass: `ecc.py:PointTest:test_add1`"
    ]
   },
   {
@@ -371,7 +455,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 6.2\n",
+    "# Exercise 15\n",
     "\n",
     "reload(ecc)\n",
     "run(ecc.PointTest('test_add1'))"
@@ -384,7 +468,6 @@
    "outputs": [],
    "source": [
     "# Point Addition where x1 = x2 Example\n",
-    "\n",
     "a = 5\n",
     "x1, y1 = (2, 5)\n",
     "s = (3*x1**2+a)/(2*y1)\n",
@@ -397,14 +480,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 7\n",
-    "\n",
-    "#### 7.1. For the curve \\\\(y^2 = x^3 + 5x + 7\\\\), what is \\\\((-1,1) + (-1,1)\\\\)?\n",
-    "\n",
-    "#### 7.2. Make [this test](/edit/session1/ecc.py) pass\n",
-    "```\n",
-    "ecc.py:PointTest:test_add2\n",
-    "```"
+    "### Exercise 16\n",
+    "For the curve \\\\(y^2 = x^3 + 5x + 7\\\\), what is \\\\((-1,1) + (-1,1)\\\\)?\n"
    ]
   },
   {
@@ -413,50 +490,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 7.1\n",
+    "# Exercise 16\n",
     "\n",
     "a, b = 5, 7\n",
     "x1, y1 = -1, -1\n",
-    "\n",
     "# formula in python\n",
     "# s = (3*x1**2+a)/(2*y1)\n",
-    "# x3 = s**2 - 2*x1\n",
-    "# y3 = s*(x1-x3) - y1\n",
-    "# print x3, y3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Exercise 7.2\n",
     "\n",
-    "reload(ecc)\n",
-    "run(ecc.PointTest('test_add2'))"
+    "# x3 = s**2 - 2*x1\n",
+    "\n",
+    "# y3 = s*(x1-x3) - y1\n",
+    "\n",
+    "# print the coordinates\n"
    ]
   }
  ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 2
 }
