--- a/session2/session2.ipynb
+++ b/session2/session2.ipynb
@@ -6,24 +6,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "############## PLEASE RUN THIS CELL FIRST! ###################\n",
+    "\n",
     "# import everything and define a test runner function\n",
     "from importlib import reload\n",
-    "\n",
+    "from helper import run\n",
     "import ecc, helper\n",
-    "\n",
-    "from ecc import (\n",
-    "    FieldElement, \n",
-    "    G,\n",
-    "    Point,\n",
-    "    S256Point,\n",
-    ")\n",
-    "from helper import (\n",
-    "    encode_base58,\n",
-    "    hash160,\n",
-    "    hash256,\n",
-    "    little_endian_to_int,\n",
-    "    run,\n",
-    ")"
+    "from ecc import FieldElement, G, Point, S256Point\n",
+    "from helper import encode_base58, hash160, hash256, little_endian_to_int"
    ]
   },
   {
@@ -33,10 +23,8 @@
    "outputs": [],
    "source": [
     "# Verify curve Example\n",
-    "\n",
     "prime = 137\n",
     "x, y = 73, 128\n",
-    "\n",
     "print(y**2 % prime == (x**3 + 7) % prime)"
    ]
   },
@@ -45,15 +33,10 @@
    "metadata": {},
    "source": [
     "### Exercise 1\n",
-    "\n",
-    "#### 1.1. Find out which points are valid on the curve \\\\( y^2 = x^3 + 7: F_{223} \\\\)\n",
+    "Find out which points are valid on the curve \\\\( y^2 = x^3 + 7: F_{223} \\\\)\n",
     "```\n",
     "(192,105), (17,56), (200,119), (1,193), (42,99)\n",
-    "```\n",
-    "#### 1.2. Write [this test](/edit/session2/ecc.py) using the results above\n",
-    "```\n",
-    "ecc.py:ECCTest:test_on_curve\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -62,21 +45,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 1.1\n",
+    "# Exercise 1\n",
     "\n",
     "prime = 223\n",
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
-    "\n",
     "points = ((192,105), (17,56), (200,119), (1,193), (42,99))\n",
-    "\n",
     "# iterate over points\n",
+    "\n",
     "    # Initialize points this way:\n",
     "    # x = FieldElement(x_raw, prime)\n",
     "    # y = FieldElement(y_raw, prime)\n",
+    "\n",
+    "\n",
     "    # try initializing, ValueError means not on curve\n",
     "    # p = Point(x, y, a, b)\n",
-    "    # print whether it's on the curve or not"
+    "    # print whether it's on the curve or not\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 2\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session2/ecc.py) pass: `ecc.py:ECCTest:test_on_curve`"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 1.2\n",
+    "# Exercise 2\n",
     "\n",
     "reload(ecc)\n",
     "run(ecc.ECCTest('test_on_curve'))"
@@ -97,14 +97,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ecc import FieldElement, Point\n",
     "# Example where x1 != x2\n",
-    "\n",
     "prime = 137\n",
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
     "p1 = Point(FieldElement(73, prime), FieldElement(128, prime), a, b)\n",
     "p2 = Point(FieldElement(46, prime), FieldElement(22, prime), a, b)\n",
-    "\n",
     "print(p1+p2)"
    ]
   },
@@ -112,17 +111,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 2\n",
-    "\n",
-    "#### 2.1. Find the following point additions on the curve  \\\\( y^2 = x^3 + 7: F_{223} \\\\)\n",
+    "### Exercise 3\n",
+    "Find the following point additions on the curve  \\\\( y^2 = x^3 + 7: F_{223} \\\\)\n",
     "```\n",
     "(192,105) + (17,56), (47,71) + (117,141), (143,98) + (76,66)\n",
-    "```\n",
-    "\n",
-    "#### 2.2. Write [this test](/edit/session2/ecc.py) using the results above\n",
-    "```\n",
-    "ecc.py:ECCTest:test_add1\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -131,23 +124,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 2.1\n",
+    "# Exercise 3\n",
     "\n",
     "prime = 223\n",
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
-    "\n",
     "additions = ((192, 105, 17, 56), (47, 71, 117, 141), (143, 98, 76, 66))\n",
-    "\n",
     "# iterate over the additions to be done\n",
-    "    # Initialize points this way:\n",
-    "    # x1 = FieldElement(x1_raw, prime)\n",
-    "    # y1 = FieldElement(y1_raw, prime)\n",
-    "    # p1 = Point(x1, y1, a, b)\n",
-    "    # x2 = FieldElement(x2_raw, prime)\n",
-    "    # y2 = FieldElement(y2_raw, prime)\n",
-    "    # p2 = Point(x2, y2, a, b)\n",
-    "    # print p1+p2"
+    "\n",
+    "   # Initialize points this way:\n",
+    "   # x1 = FieldElement(x1_raw, prime)\n",
+    "   # y1 = FieldElement(y1_raw, prime)\n",
+    "   # p1 = Point(x1, y1, a, b)\n",
+    "   # x2 = FieldElement(x2_raw, prime)\n",
+    "   # y2 = FieldElement(y2_raw, prime)\n",
+    "   # p2 = Point(x2, y2, a, b)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "   # print p1+p2\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 4\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session2/ecc.py) pass: `ecc.py:ECCTest:test_add`"
    ]
   },
   {
@@ -156,7 +166,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 2.2\n",
+    "# Exercise 4\n",
     "\n",
     "reload(ecc)\n",
     "run(ecc.ECCTest('test_add'))"
@@ -168,13 +178,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ecc import FieldElement, Point\n",
     "# Example where x1 != x2\n",
-    "\n",
     "prime = 137\n",
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
     "p = Point(FieldElement(73, prime), FieldElement(128, prime), a, b)\n",
-    "\n",
     "print(p+p)"
    ]
   },
@@ -182,9 +191,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 3\n",
-    "\n",
-    "#### 3.1. Find the following scalar multiplications on the curve  \\\\( y^2 = x^3 + 7: F_{223} \\\\)\n",
+    "### Exercise 5\n",
+    "Find the following scalar multiplications on the curve  \\\\( y^2 = x^3 + 7: F_{223} \\\\)\n",
     "\n",
     "* 2*(192,105)\n",
     "* 2*(143,98)\n",
@@ -193,7 +201,7 @@
     "* 8*(47,71)\n",
     "* 21*(47,71)\n",
     "\n",
-    "#### Hint: add the point to itself n times"
+    "#### Hint: add the point to itself n times\n"
    ]
   },
   {
@@ -202,23 +210,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 3.1\n",
+    "# Exercise 5\n",
     "\n",
     "prime = 223\n",
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
-    "\n",
     "multiplications = ((2, 192, 105), (2, 143, 98), (2, 47, 71), (4, 47, 71), (8, 47, 71), (21, 47, 71))\n",
-    "\n",
     "# iterate over the multiplications\n",
-    "    # Initialize points this way:\n",
-    "    # x = FieldElement(x_raw, prime)\n",
-    "    # y = FieldElement(y_raw, prime)\n",
-    "    # p = Point(x, y, a, b)\n",
-    "    # start product at 0 (point at infinity)\n",
-    "    # loop over n times (n is 2, 4, 8 or 21 in the above examples)\n",
-    "        # add the point to the product\n",
-    "    # print product"
+    "\n",
+    "   # Initialize points this way:\n",
+    "   # x = FieldElement(x_raw, prime)\n",
+    "   # y = FieldElement(y_raw, prime)\n",
+    "   # p = Point(x, y, a, b)\n",
+    "\n",
+    "\n",
+    "\n",
+    "   # start product at 0 (point at infinity)\n",
+    "\n",
+    "   # loop over n times (n is 2, 4, 8 or 21 in the above examples)\n",
+    "\n",
+    "       # add the point to the product\n",
+    "\n",
+    "   # print product\n"
    ]
   },
   {
@@ -227,8 +240,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ecc import FieldElement, Point\n",
     "# Group Example\n",
-    "\n",
     "prime = 223\n",
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
@@ -236,7 +249,6 @@
     "inf = Point(None, None, a, b)\n",
     "total = g\n",
     "count = 1\n",
-    "\n",
     "while total != inf:\n",
     "    print('{}:{}'.format(count, total))\n",
     "    total += g\n",
@@ -248,16 +260,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 4\n",
+    "### Exercise 6\n",
+    "Find out what the order of the group generated by (15, 86) is on  \\\\( y^2 = x^3 + 7: F_{223} \\\\)\n",
     "\n",
-    "#### 4.1. Find out what the order of the group generated by (15, 86) is on  \\\\( y^2 = x^3 + 7: F_{223} \\\\)\n",
-    "\n",
-    "#### Hint: add the point to itself until you get the point at infinity\n",
-    "\n",
-    "#### 4.2 Write [this test](/edit/session2/ecc.py) using the results above\n",
-    "```\n",
-    "ecc.py:ECCTest:test_rmul\n",
-    "```"
+    "#### Hint: add the point to itself until you get the point at infinity\n"
    ]
   },
   {
@@ -266,23 +272,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 4.1\n",
+    "# Exercise 6\n",
     "\n",
     "prime = 223\n",
     "a = FieldElement(0, prime)\n",
     "b = FieldElement(7, prime)\n",
-    "\n",
     "x = FieldElement(15, prime)\n",
     "y = FieldElement(86, prime)\n",
     "p = Point(x, y, a, b)\n",
     "inf = Point(None, None, a, b)\n",
-    "\n",
     "# start product at point\n",
+    "\n",
     "# start counter at 1\n",
+    "\n",
     "# loop until you get point at infinity (0)\n",
+    "\n",
     "    # add the point to the product\n",
+    "\n",
     "    # increment counter\n",
-    "# print counter"
+    "\n",
+    "# print counter\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 7\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session2/ecc.py) pass: `ecc.py:ECCTest:test_rmul`"
    ]
   },
   {
@@ -291,7 +312,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 4.2\n",
+    "# Exercise 7\n",
     "\n",
     "reload(ecc)\n",
     "run(ecc.ECCTest('test_rmul'))"
@@ -316,8 +337,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ecc import G\n",
     "# Confirming order of G is n\n",
-    "\n",
     "n = 0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFEBAAEDCE6AF48A03BBFD25E8CD0364141\n",
     "print(n*G)"
    ]
@@ -328,8 +349,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ecc import G\n",
     "# Getting the public point from a secret\n",
-    "\n",
     "secret = 999\n",
     "point = secret*G\n",
     "print(point)"
@@ -339,19 +360,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 5\n",
-    "\n",
-    "#### 5.1. Get the public point where the scalar is the following:\n",
+    "### Exercise 8\n",
+    "Get the public point where the scalar is the following:\n",
     "\n",
     "* 7\n",
     "* 1485\n",
     "* \\\\(2^{128}\\\\)\n",
-    "* \\\\(2^{240}+2^{31}\\\\)\n",
-    "\n",
-    "#### 5.2. Make [this test](/edit/session2/ecc.py) pass\n",
-    "```\n",
-    "ecc.py:S256Test:test_pubpoint\n",
-    "```"
+    "* \\\\(2^{240}+2^{31}\\\\)\n"
    ]
   },
   {
@@ -360,12 +375,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 5.1\n",
+    "# Exercise 8\n",
     "\n",
     "secrets = (7, 1485, 2**128, 2**240+2**31)\n",
-    "\n",
     "# iterate over secrets\n",
-    "    # get the public point"
+    "for secret in secrets:\n",
+    "    # get the public point\n",
+    "    print(secret*G)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 9\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session2/ecc.py) pass: `ecc.py:S256Test:test_pubpoint`"
    ]
   },
   {
@@ -374,7 +402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 5.2\n",
+    "# Exercise 9\n",
     "\n",
     "reload(ecc)\n",
     "run(ecc.S256Test('test_pubpoint'))"
@@ -386,10 +414,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ecc import S256Point\n",
     "# SEC Example\n",
-    "\n",
     "point = S256Point(0x5CBDF0646E5DB4EAA398F365F2EA7A0E3D419B7E0330E39CE92BDDEDCAC4F9BC, 0x6AEBCA40BA255960A3178D6D861A54DBA813D0B813FDE7B5A5082628087264DA)\n",
-    "\n",
     "uncompressed = b'\\x04' + point.x.num.to_bytes(32, 'big') + point.y.num.to_bytes(32, 'big')\n",
     "print(uncompressed.hex())\n",
     "if point.y.num % 2 == 1:\n",
@@ -403,17 +430,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Exercise 6\n",
-    "\n",
-    "#### 6.1. Find the compressed and uncompressed SEC format for pub keys where the private keys are:\n",
+    "### Exercise 10\n",
+    "Find the compressed and uncompressed SEC format for pub keys where the private keys are:\n",
     "```\n",
     "999**3, 123, 42424242\n",
-    "```\n",
-    "\n",
-    "#### 6.2. Make [this test](/edit/session2/ecc.py) pass\n",
-    "```\n",
-    "ecc.py:S256Test:test_sec\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -422,16 +443,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 6.1\n",
+    "# Exercise 10\n",
     "\n",
     "secrets = (999**3, 123, 42424242)\n",
-    "\n",
     "# iterate through secrets\n",
-    "    # get public point\n",
-    "    # uncompressed - b'\\x04' followed by x coord, then y coord\n",
-    "    # here's how you express a coordinate in bytes: some_integer.to_bytes(32, 'big')\n",
-    "    # compressed - b'\\x02'/b'\\x03' follewed by x coord. 02 if y is even, 03 otherwise\n",
-    "    # print the .hex() of both"
+    "\n",
+    "   # get public point\n",
+    "\n",
+    "   # uncompressed - b'\\x04' followed by x coord, then y coord\n",
+    "   # here's how you express a coordinate in bytes: some_integer.to_bytes(32, 'big')\n",
+    "\n",
+    "   # compressed - b'\\x02'/b'\\x03' follewed by x coord. 02 if y is even, 03 otherwise\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "   # print the .hex() of both\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 11\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session2/ecc.py) pass: `ecc.py:S256Test:test_sec`"
    ]
   },
   {
@@ -440,7 +480,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 6.2\n",
+    "# Exercise 11\n",
     "\n",
     "reload(ecc)\n",
     "run(ecc.S256Test('test_sec'))"
@@ -452,11 +492,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from helper import encode_base58, hash160, hash256\n",
     "# Address Example\n",
-    "\n",
     "sec = bytes.fromhex('025CBDF0646E5DB4EAA398F365F2EA7A0E3D419B7E0330E39CE92BDDEDCAC4F9BC')\n",
     "h160 = hash160(sec)\n",
-    "raw = b\"\\x00\" + h160\n",
+    "raw = b'\\x00' + h160\n",
     "raw = raw + hash256(raw)[:4]\n",
     "addr = encode_base58(raw)\n",
     "print(addr)"
@@ -466,23 +506,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 7\n",
-    "\n",
-    "#### 7.1. Find the mainnet and testnet addresses corresponding to the private keys:\n",
+    "### Exercise 12\n",
+    "Find the mainnet and testnet addresses corresponding to the private keys:\n",
     "\n",
     "* \\\\(888^3\\\\), compressed\n",
     "* 321, uncompressed\n",
-    "* 4242424242, uncompressed\n",
-    "\n",
-    "#### 7.2. Make [this test](/edit/session2/helper.py) pass\n",
-    "```\n",
-    "helper.py:HelperTest:test_encode_base58_checksum\n",
-    "```\n",
-    "\n",
-    "#### 7.3. Make [this test](/edit/session2/ecc.py) pass\n",
-    "```\n",
-    "ecc.py:S256Test:test_address\n",
-    "```"
+    "* 4242424242, uncompressed\n"
    ]
   },
   {
@@ -491,26 +520,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 7.1\n",
+    "# Exercise 12\n",
     "\n",
     "from ecc import G\n",
-    "\n",
     "components = (\n",
     "    # (secret, compressed)\n",
     "    (888**3, True),\n",
     "    (321, False),\n",
     "    (4242424242, False),\n",
     ")\n",
-    "\n",
     "# iterate through components\n",
-    "    # get the public point\n",
-    "    # get the sec format\n",
-    "    # hash160 the result\n",
-    "    # prepend b'\\x00' for mainnet b'\\x6f' for testnet\n",
-    "        # raw is the prefix + h160\n",
-    "        # get the hash256 of the raw, first 4 bytes are the checksum\n",
-    "        # append checksum\n",
-    "        # encode_base58 the whole thing"
+    "\n",
+    "   # get the public point\n",
+    "\n",
+    "   # get the sec format\n",
+    "\n",
+    "   # hash160 the result\n",
+    "\n",
+    "   # prepend b'\\x00' for mainnet b'\\x6f' for testnet\n",
+    "\n",
+    "       # raw is the prefix + h160\n",
+    "\n",
+    "       # get the hash256 of the raw, first 4 bytes are the checksum\n",
+    "\n",
+    "       # append checksum\n",
+    "\n",
+    "       # encode_base58 the whole thing\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 13\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session2/helper.py) pass: `helper.py:HelperTest:test_encode_base58_checksum`"
    ]
   },
   {
@@ -519,19 +566,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 7.2\n",
+    "# Exercise 13\n",
     "\n",
     "reload(helper)\n",
     "run(helper.HelperTest('test_encode_base58_checksum'))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 14\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session2/ecc.py) pass: `ecc.py:S256Test:test_address`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 7.3\n",
+    "# Exercise 14\n",
     "\n",
     "reload(ecc)\n",
     "run(ecc.S256Test('test_address'))"
@@ -541,11 +600,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 8\n",
-    "\n",
-    "#### 8.1. Create a testnet address using your own secret key\n",
-    "#### (use your phone number if you can't think of anything)\n",
-    "#### Record this secret key for tomorrow!"
+    "### Exercise 15\n",
+    "Create a testnet address using your own secret key (use your name and email as the password if you can't think of anything). Record this secret key for tomorrow!\n"
    ]
   },
   {
@@ -554,38 +610,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 8.1\n",
+    "# Exercise 15\n",
     "\n",
     "from ecc import G\n",
-    "\n",
     "# use a passphrase\n",
-    "passphrase = b'<fill this in>'\n",
+    "passphrase = b'<fill this in with your name and email>'\n",
     "secret = little_endian_to_int(hash256(passphrase))\n",
-    "\n",
     "# get the public point\n",
-    "# if you completed 7.2, just do the .address(testnet=True) method on the public point"
+    "\n",
+    "# if you completed 7.2, just do the .address(testnet=True) method on the public point\n"
    ]
   }
  ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 2
 }
