--- a/session1/complete/session1.ipynb
+++ b/session1/complete/session1.ipynb
@@ -6,13 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "############## PLEASE RUN THIS CELL FIRST! ###################\n",
+    "\n",
     "# import everything and define a test runner function\n",
     "from importlib import reload\n",
-    "from random import randint\n",
-    "\n",
+    "from helper import run\n",
     "import ecc, helper\n",
-    "\n",
-    "from helper import run"
+    "from random import randint"
    ]
   },
   {
@@ -33,7 +33,6 @@
    ],
    "source": [
     "# Addition/Subtraction example\n",
-    "\n",
     "print((11 + 6) % 19)\n",
     "print((17 - 11) % 19)\n",
     "print((8 + 14) % 19)\n",
@@ -45,21 +44,13 @@
    "metadata": {},
    "source": [
     "### Exercise 1\n",
-    "\n",
-    "Remember the % operator does the actual modulo operation. Also remember that `+` and `-` need to be in `()` because in the order of operations `%` comes before `+` and `-`.\n",
-    "\n",
-    "#### 1.1. Solve these equations in \\\\(F_{31}\\\\):\n",
-    "\n",
+    "Solve these equations in \\\\(F_{31}\\\\):\n",
     "* \\\\(2+15=?\\\\)\n",
     "* \\\\(17+21=?\\\\)\n",
     "* \\\\(29-4=?\\\\)\n",
     "* \\\\(15-30=?\\\\)\n",
     "\n",
-    "#### 1.2. Make [these tests](/edit/session1/ecc.py) pass:\n",
-    "```\n",
-    "ecc.py:FieldElementTest:test_add\n",
-    "ecc.py:FieldElementTest:test_sub\n",
-    "```"
+    "Remember the % operator does the actual modulo operation. Also remember that `+` and `-` need to be in `()` because in the order of operations `%` comes before `+` and `-`.\n"
    ]
   },
   {
@@ -79,7 +70,7 @@
     }
    ],
    "source": [
-    "# Exercise 1.1\n",
+    "# Exercise 1\n",
     "\n",
     "# remember that % is the modulo operator\n",
     "prime = 31\n",
@@ -91,6 +82,18 @@
     "print((29-4) % prime)\n",
     "# 15-30=?\n",
     "print((15-30) % prime)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 2\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session1/ecc.py) pass: `ecc.py:FieldElementTest:test_add`"
    ]
   },
   {
@@ -106,26 +109,56 @@
       "----------------------------------------------------------------------\n",
       "Ran 1 test in 0.001s\n",
       "\n",
-      "OK\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 2\n",
+    "\n",
+    "reload(ecc)\n",
+    "run(ecc.FieldElementTest('test_add'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 3\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session1/ecc.py) pass: `ecc.py:FieldElementTest:test_sub`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.000s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
     }
    ],
    "source": [
-    "# Exercise 1.2\n",
+    "# Exercise 3\n",
     "\n",
     "reload(ecc)\n",
-    "run(ecc.FieldElementTest('test_add'))\n",
     "run(ecc.FieldElementTest('test_sub'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +174,6 @@
    ],
    "source": [
     "# Multiplication/Exponentiation Example\n",
-    "\n",
     "print(2 * 4 % 19)\n",
     "print(7 * 3 % 19)\n",
     "print(11 ** 3 % 19)\n",
@@ -152,28 +184,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 2\n",
-    "\n",
-    "#### 2.1. Solve these equations in \\\\(F_{31}\\\\):\n",
-    "\n",
+    "### Exercise 4\n",
+    "Solve these equations in \\\\(F_{31}\\\\):\n",
     "* \\\\(24\\cdot19=?\\\\)\n",
     "* \\\\(17^3=?\\\\)\n",
-    "* \\\\(5^5\\cdot18=?\\\\)\n",
-    "\n",
-    "#### 2.2. Write a program to calculate \\\\(0\\cdot k, 1\\cdot k, 2\\cdot k, 3\\cdot k, ... 30\\cdot k\\\\) for some \\\\(k\\\\) in \\\\(F_{31}\\\\).  Notice anything about these sets?\n",
-    "\n",
-    "#### 2.3. Make [these tests](/edit/session1/ecc.py) pass:\n",
-    "```\n",
-    "ecc.py:FieldElementTest:test_mul\n",
-    "ecc.py:FieldElementTest:test_pow\n",
-    "```\n",
-    "\n",
-    "#### Bonus. Write a program to calculate \\\\(k^{30}\\\\) for all k in \\\\(F_{31}\\\\). Notice anything?"
+    "* \\\\(5^5\\cdot18=?\\\\)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +207,7 @@
     }
    ],
    "source": [
-    "# Exercise 2.1\n",
+    "# Exercise 4\n",
     "\n",
     "# remember that ** is the exponentiation operator\n",
     "prime = 31\n",
@@ -200,8 +220,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 5\n",
+    "Write a program to calculate \\\\(0\\cdot k, 1\\cdot k, 2\\cdot k, 3\\cdot k, ... 30\\cdot k\\\\) for some \\\\(k\\\\) in \\\\(F_{31}\\\\).  Notice anything about these sets?\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -213,20 +241,30 @@
     }
    ],
    "source": [
-    "# Exercise 2.2\n",
+    "# Exercise 5\n",
     "\n",
     "from random import randint\n",
-    "\n",
     "prime = 31\n",
     "k = randint(1,prime)\n",
-    "\n",
     "# use range(prime) to iterate over all numbers from 0 to 30 inclusive\n",
     "print(sorted([i*k % prime for i in range(prime)]))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 6\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session1/ecc.py) pass: `ecc.py:FieldElementTest:test_mul`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +275,38 @@
       "----------------------------------------------------------------------\n",
       "Ran 1 test in 0.001s\n",
       "\n",
-      "OK\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 6\n",
+    "\n",
+    "reload(ecc)\n",
+    "run(ecc.FieldElementTest('test_mul'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 7\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session1/ecc.py) pass: `ecc.py:FieldElementTest:test_pow`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
       "Ran 1 test in 0.001s\n",
@@ -247,16 +316,24 @@
     }
    ],
    "source": [
-    "# Exercise 2.3\n",
+    "# Exercise 7\n",
     "\n",
     "reload(ecc)\n",
-    "run(ecc.FieldElementTest('test_mul'))\n",
     "run(ecc.FieldElementTest('test_pow'))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 8\n",
+    "#### BONUS QUESTION, ONLY ATTEMPT IF YOU HAVE TIME\n",
+    "Write a program to calculate \\\\(k^{30}\\\\) for all k in \\\\(F_{31}\\\\). Notice anything?\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -268,17 +345,17 @@
     }
    ],
    "source": [
+    "# Exercise 8\n",
+    "\n",
     "# Bonus\n",
-    "\n",
     "prime = 31\n",
-    "\n",
     "# use range(1, prime) to iterate over all numbers from 1 to 30 inclusive\n",
     "print([i**30 % prime for i in range(1, prime)])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +371,6 @@
    ],
    "source": [
     "# Division Example\n",
-    "\n",
     "print(2 * 3**17 % 19)\n",
     "print(2 * pow(3, 17, 19) % 19)\n",
     "print(3 * 15**17 % 19)\n",
@@ -305,24 +381,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 3\n",
-    "\n",
-    "#### 3.1. Solve these equations in \\\\(F_{31}\\\\):\n",
-    "\n",
+    "### Exercise 9\n",
+    "Solve these equations in \\\\(F_{31}\\\\):\n",
     "* \\\\(3/24 = ?\\\\)\n",
     "* \\\\(17^{-3} = ?\\\\)\n",
-    "* \\\\(4^{-4}\\cdot{11} = ?\\\\)\n",
-    "\n",
-    "#### 3.2. Make [these tests](/edit/session1/ecc.py) pass:\n",
-    "\n",
-    "```\n",
-    "ecc.py:FieldElementTest:test_div\n",
-    "```"
+    "* \\\\(4^{-4}\\cdot{11} = ?\\\\)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +404,7 @@
     }
    ],
    "source": [
-    "# Exercise 3.1\n",
+    "# Exercise 9\n",
     "\n",
     "# remember pow(x, p-2, p) is the same as 1/x in F_p\n",
     "prime = 31\n",
@@ -349,8 +417,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 10\n",
+    "\n",
+    "\n",
+    "Hint: the `__pow__` method needs a positive number for the exponent. You can mod by p-1\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session1/ecc.py) pass: `ecc.py:FieldElementTest:test_div`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -366,18 +447,15 @@
     }
    ],
    "source": [
-    "# Exercise 3.2\n",
+    "# Exercise 10\n",
     "\n",
     "reload(ecc)\n",
-    "run(ecc.FieldElementTest('test_div'))\n",
-    "\n",
-    "# Hint: the __pow__ method needs a positive number for the exponent.\n",
-    "# You can mod by p-1"
+    "run(ecc.FieldElementTest('test_div'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -390,9 +468,7 @@
    ],
    "source": [
     "# Elliptic Curve Example\n",
-    "\n",
     "x, y = -1, -1\n",
-    "\n",
     "print(y**2 == x**3 + 5*x + 7)"
    ]
   },
@@ -400,21 +476,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 4\n",
-    "\n",
-    "#### 4.1. For the curve \\\\(y^2 = x^3 + 5x + 7\\\\), which of these are on the curve?\n",
-    "\n",
-    "\\\\((-2,4), (3,7), (18,77)\\\\)\n",
-    "\n",
-    "#### 4.2. Make [this test](/edit/session1/ecc.py) pass\n",
-    "```\n",
-    "ecc.py:PointTest:test_on_curve\n",
-    "```"
+    "### Exercise 11\n",
+    "For the curve \\\\(y^2 = x^3 + 5x + 7\\\\), which of these points are on the curve?\n",
+    "\\\\((-2,4), (3,7), (18,77)\\\\)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -428,13 +497,11 @@
     }
    ],
    "source": [
-    "# Exercise 4.1\n",
+    "# Exercise 11\n",
     "\n",
     "# (-2,4), (3,7), (18,77)\n",
     "# equation in python is: y**2 == x**3 + 5*x + 7\n",
-    "\n",
     "points = ((-2,4), (3,7), (18,77))\n",
-    "\n",
     "for x, y in points:\n",
     "    # determine whether (x,y) is on the curve\n",
     "    if y**2 == x**3 + 5*x + 7:\n",
@@ -444,8 +511,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 12\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session1/ecc.py) pass: `ecc.py:PointTest:test_on_curve`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +540,7 @@
     }
    ],
    "source": [
-    "# Exercise 4.2\n",
+    "# Exercise 12\n",
     "\n",
     "reload(ecc)\n",
     "run(ecc.PointTest('test_on_curve'))"
@@ -471,17 +550,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 5\n",
+    "### Exercise 13\n",
     "\n",
-    "#### 5.1. Make [this test](/edit/session1/ecc.py) pass\n",
-    "```\n",
-    "ecc.py:PointTest:test_add0\n",
-    "```"
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session1/ecc.py) pass: `ecc.py:PointTest:test_add0`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +576,7 @@
     }
    ],
    "source": [
-    "# Exercise 5.1\n",
+    "# Exercise 13\n",
     "\n",
     "reload(ecc)\n",
     "run(ecc.PointTest('test_add0'))"
@@ -505,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +597,6 @@
    ],
    "source": [
     "# Point Addition where x1 != x2 Example\n",
-    "\n",
     "x1, y1 = (2, 5)\n",
     "x2, y2 = (3, 7)\n",
     "s = (y2-y1)/(x2-x1)\n",
@@ -531,19 +609,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 6\n",
-    "\n",
-    "#### 6.1. For the curve \\\\(y^2 = x^3 + 5x + 7\\\\), what is \\\\((2,5) + (-1,-1)\\\\)?\n",
-    "\n",
-    "#### 6.2. Make [this test](/edit/session1/ecc.py) pass\n",
-    "```\n",
-    "ecc.py:PointTest:test_add1\n",
-    "```"
+    "### Exercise 14\n",
+    "For the curve \\\\(y^2 = x^3 + 5x + 7\\\\), what is \\\\((2,5) + (-1,-1)\\\\)?\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +627,7 @@
     }
    ],
    "source": [
-    "# Exercise 6.1\n",
+    "# Exercise 14\n",
     "\n",
     "x1, y1 = (2,5)\n",
     "x2, y2 = (-1,-1)\n",
@@ -566,13 +638,25 @@
     "x3 = s**2 - x2 - x1\n",
     "# y3 = s*(x1-x3)-y1\n",
     "y3 = s*(x1-x3) - y1\n",
-    "\n",
+    "# print the coordinates\n",
     "print(x3, y3)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 15\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session1/ecc.py) pass: `ecc.py:PointTest:test_add1`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +672,7 @@
     }
    ],
    "source": [
-    "# Exercise 6.2\n",
+    "# Exercise 15\n",
     "\n",
     "reload(ecc)\n",
     "run(ecc.PointTest('test_add1'))"
@@ -596,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +693,6 @@
    ],
    "source": [
     "# Point Addition where x1 = x2 Example\n",
-    "\n",
     "a = 5\n",
     "x1, y1 = (2, 5)\n",
     "s = (3*x1**2+a)/(2*y1)\n",
@@ -622,19 +705,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 7\n",
-    "\n",
-    "#### 7.1. For the curve \\\\(y^2 = x^3 + 5x + 7\\\\), what is \\\\((-1,1) + (-1,1)\\\\)?\n",
-    "\n",
-    "#### 7.2. Make [this test](/edit/session1/ecc.py) pass\n",
-    "```\n",
-    "ecc.py:PointTest:test_add2\n",
-    "```"
+    "### Exercise 16\n",
+    "For the curve \\\\(y^2 = x^3 + 5x + 7\\\\), what is \\\\((-1,1) + (-1,1)\\\\)?\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -646,11 +723,10 @@
     }
    ],
    "source": [
-    "# Exercise 7.1\n",
+    "# Exercise 16\n",
     "\n",
     "a, b = 5, 7\n",
     "x1, y1 = -1, -1\n",
-    "\n",
     "# formula in python\n",
     "# s = (3*x1**2+a)/(2*y1)\n",
     "s = (3*x1**2+a)/(2*y1)\n",
@@ -658,31 +734,8 @@
     "x3 = s**2 - 2*x1\n",
     "# y3 = s*(x1-x3) - y1\n",
     "y3 = s*(x1-x3) - y1\n",
+    "# print the coordinates\n",
     "print(x3, y3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.001s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Exercise 7.2\n",
-    "\n",
-    "reload(ecc)\n",
-    "run(ecc.PointTest('test_add2'))"
    ]
   }
  ],
