--- a/session8/session8.ipynb
+++ b/session8/session8.ipynb
@@ -6,43 +6,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "############## PLEASE RUN THIS CELL FIRST! ###################\n",
+    "\n",
     "# import everything and define a test runner function\n",
     "from importlib import reload\n",
+    "from helper import run\n",
     "from time import sleep\n",
-    "\n",
     "import bloomfilter, merkleblock\n",
-    "\n",
     "from block import Block\n",
-    "from bloomfilter import (\n",
-    "    BloomFilter,\n",
-    "    BIP37_CONSTANT,\n",
-    ")\n",
+    "from bloomfilter import BloomFilter, BIP37_CONSTANT\n",
     "from ecc import PrivateKey\n",
-    "from helper import (\n",
-    "    bit_field_to_bytes,\n",
-    "    decode_base58,\n",
-    "    hash160,\n",
-    "    hash256,\n",
-    "    little_endian_to_int,\n",
-    "    murmur3,\n",
-    "    run,\n",
-    "    SIGHASH_ALL,\n",
-    ")\n",
+    "from helper import bit_field_to_bytes, decode_base58, hash160, hash256, little_endian_to_int, murmur3, SIGHASH_ALL\n",
     "from merkleblock import MerkleBlock\n",
-    "from network import (\n",
-    "    GetDataMessage,\n",
-    "    GetHeadersMessage,\n",
-    "    HeadersMessage,\n",
-    "    SimpleNode,\n",
-    "    FILTERED_BLOCK_DATA_TYPE,\n",
-    "    TX_DATA_TYPE,\n",
-    ")\n",
+    "from network import GetDataMessage, GetHeadersMessage, HeadersMessage, SimpleNode, FILTERED_BLOCK_DATA_TYPE, TX_DATA_TYPE\n",
     "from script import p2pkh_script\n",
-    "from tx import (\n",
-    "    Tx,\n",
-    "    TxIn,\n",
-    "    TxOut,\n",
-    ")"
+    "from tx import Tx, TxIn, TxOut"
    ]
   },
   {
@@ -52,10 +30,8 @@
    "outputs": [],
    "source": [
     "# Example Bloom Filter\n",
-    "\n",
     "bit_field_size = 10\n",
     "bit_field = [0] * bit_field_size\n",
-    "\n",
     "h256 = hash256(b'hello world')\n",
     "bit = int.from_bytes(h256, 'big') % bit_field_size\n",
     "bit_field[bit] = 1\n",
@@ -69,10 +45,8 @@
    "outputs": [],
    "source": [
     "# Example Bloom Filter 2\n",
-    "\n",
     "bit_field_size = 10\n",
     "bit_field = [0] * bit_field_size\n",
-    "\n",
     "h = hash256(b'hello world')\n",
     "bit = int.from_bytes(h, 'big') % bit_field_size\n",
     "bit_field[bit] = 1\n",
@@ -89,10 +63,8 @@
    "outputs": [],
    "source": [
     "# Example Bloom Filter 3\n",
-    "\n",
     "bit_field_size = 10\n",
     "bit_field = [0] * bit_field_size\n",
-    "\n",
     "phrase1 = b'hello world'\n",
     "h1 = hash256(phrase1)\n",
     "bit1 = int.from_bytes(h1, 'big') % bit_field_size\n",
@@ -117,14 +89,11 @@
    "outputs": [],
    "source": [
     "# Example BIP0037 Bloom Filter\n",
-    "\n",
     "field_size = 2\n",
     "num_functions = 2\n",
     "tweak = 42\n",
-    "\n",
     "bit_field_size = field_size * 8\n",
     "bit_field = [0] * bit_field_size\n",
-    "\n",
     "for phrase in (b'hello world', b'goodbye'):\n",
     "    for i in range(num_functions):\n",
     "        seed = i * BIP37_CONSTANT + tweak\n",
@@ -139,13 +108,10 @@
    "metadata": {},
    "source": [
     "### Exercise 1\n",
+    "Given a Bloom Filter with these parameters: size=10, function count=5, tweak=99, which bits are set after adding these items?\n",
     "\n",
-    "#### 1.1 Given a Bloom Filter with these parameters: size=10, function count=5, tweak=99, which bits are set after adding these items? \n",
-    "\n",
-    " * `b'Hello World'`\n",
-    " * `b'Goodbye!'`\n",
-    "\n",
-    "#### 1.2. Make [this test](/edit/session8/bloomfilter.py) pass."
+    "* `b'Hello World'`\n",
+    "* `b'Goodbye!'`\n"
    ]
   },
   {
@@ -154,23 +120,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 1.1\n",
+    "# Exercise 1\n",
     "\n",
     "field_size = 10\n",
     "function_count = 5\n",
     "tweak = 99\n",
     "items = (b'Hello World',  b'Goodbye!')\n",
-    "\n",
     "# bit_field_size is 8 * field_size\n",
+    "\n",
     "# create a bit field with the appropriate size\n",
     "\n",
     "# for each item you want to add to the filter\n",
+    "\n",
     "    # iterate function_count number of times\n",
+    "\n",
     "        # BIP0037 spec seed is i*BIP37_CONSTANT + tweak\n",
+    "\n",
     "        # get the murmur3 hash given that seed\n",
+    "\n",
     "        # set the bit to be h mod the bit_field_size\n",
+    "\n",
     "        # set the bit_field at the index bit to be 1\n",
-    "# print the bit field converted to bytes using bit_field_to_bytes in hex"
+    "\n",
+    "# print the bit field converted to bytes using bit_field_to_bytes in hex\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 2\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session8/bloomfilter.py) pass: `bloomfilter.py:BloomFilterTest:test_add`"
    ]
   },
   {
@@ -179,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 1.2\n",
+    "# Exercise 2\n",
     "\n",
     "reload(bloomfilter)\n",
     "run(bloomfilter.BloomFilterTest('test_add'))"
@@ -189,20 +173,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 2\n",
+    "### Exercise 3\n",
     "\n",
-    "#### 2.1. Make [this test](/edit/session8/bloomfilter.py) pass.\n",
     "\n",
-    "```\n",
-    "bloomfilter.py:BloomFilterTest:test_filterload\n",
-    "```\n",
     "\n",
-    "#### 2.2. Do the following:\n",
     "\n",
-    "* Connect to a testnet node\n",
-    "* Load a filter for your testnet address\n",
-    "* Send a request for transactions from the block which had your previous testnet transaction\n",
-    "* Receive the merkleblock and tx messages."
+    "#### Make [this test](/edit/session8/bloomfilter.py) pass: `bloomfilter.py:BloomFilterTest:test_filterload`"
    ]
   },
   {
@@ -211,54 +187,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 2.1\n",
+    "# Exercise 3\n",
     "\n",
     "reload(bloomfilter)\n",
     "run(bloomfilter.BloomFilterTest('test_filterload'))"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 4\n",
+    "Do the following:\n",
+    "\n",
+    "* Connect to a testnet node\n",
+    "* Load a filter for your testnet address\n",
+    "* Send a request for transactions from the block which had your previous testnet transaction\n",
+    "* Receive the merkleblock and tx messages.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 2.2\n",
+    "# Exercise 4\n",
     "\n",
     "from bloomfilter import BloomFilter\n",
-    "\n",
-    "block_hash = bytes.fromhex('')  # FILL THIS IN\n",
-    "passphrase = b''  # FILL THIS IN\n",
+    "block_hash = bytes.fromhex('<block hash from class>')  # CHANGE\n",
+    "passphrase = b'<your passphrase here>'  # CHANGE\n",
     "secret = little_endian_to_int(hash256(passphrase))\n",
     "private_key = PrivateKey(secret=secret)\n",
     "addr = private_key.point.address(testnet=True)\n",
     "print(addr)\n",
     "filter_size = 30\n",
     "filter_num_functions = 5\n",
-    "filter_tweak = -1  # FILL THIS IN\n",
-    "\n",
+    "filter_tweak = -1  # CHANGE\n",
     "# get the hash160 of the address using decode_base58\n",
+    "\n",
     "# create a bloom filter using the filter_size, filter_num_functions and filter_tweak above\n",
+    "\n",
     "# add the h160 to the bloom filter\n",
     "\n",
-    "# connect to tbtc.programmingblockchain.com in testnet mode, logging True\n",
+    "# connect to tbtc.programmingblockchain.com in testnet mode\n",
+    "\n",
     "# complete the handshake\n",
+    "\n",
     "# send the filterload message\n",
+    "\n",
     "# create a getdata message\n",
+    "\n",
     "# add_data (FILTERED_BLOCK_DATA_TYPE, block_hash) to request the block\n",
+    "\n",
     "# send the getdata message\n",
+    "\n",
     "# wait for the merkleblock command\n",
+    "\n",
     "# wait for the tx command\n",
-    "# print the envelope payload in hex"
+    "\n",
+    "# print the envelope payload in hex\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 3\n",
+    "### Exercise 5\n",
     "\n",
-    "#### 3.1. Make [this test](/edit/session8/merkleblock.py) pass."
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session8/merkleblock.py) pass: `merkleblock.py:MerkleBlockTest:test_is_valid`"
    ]
   },
   {
@@ -267,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 3.1\n",
+    "# Exercise 5\n",
     "\n",
     "reload(merkleblock)\n",
     "run(merkleblock.MerkleBlockTest('test_is_valid'))"
@@ -277,11 +277,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 4\n",
+    "### Exercise 6\n",
+    "You have been sent some unknown amount of testnet bitcoins to your address.\n",
     "\n",
-    "#### 4.1. You have been sent some unknown amount of testnet bitcoins to your address. \n",
+    "Send all of it back (minus fees) to `mwJn1YPMq7y5F8J3LkC5Hxg9PHyZ5K4cFv` using only the networking protocol.\n",
     "\n",
-    "Send all of it back (minus fees) to `mwJn1YPMq7y5F8J3LkC5Hxg9PHyZ5K4cFv` using only the networking protocol."
+    "This should be a 1 input, 1 output transaction.\n",
+    "\n",
+    "Remember turn on logging in `SimpleNode` if you need to debug\n"
    ]
   },
   {
@@ -290,92 +293,112 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 4.1\n",
+    "# Exercise 6\n",
     "\n",
     "from merkleblock import MerkleBlock, MerkleTree\n",
-    "\n",
-    "last_block_hex = ''  # FILL THIS IN\n",
+    "last_block_hex = '<block hash from class>'  # CHANGE\n",
     "last_block = bytes.fromhex(last_block_hex)\n",
-    "passphrase = b''  # FILL THIS IN\n",
+    "passphrase = b'<your passphrase here>'  # CHANGE\n",
     "secret = little_endian_to_int(hash256(passphrase))\n",
     "private_key = PrivateKey(secret=secret)\n",
     "addr = private_key.point.address(testnet=True)\n",
-    "print(addr)\n",
     "h160 = decode_base58(addr)\n",
     "target_address = 'mwJn1YPMq7y5F8J3LkC5Hxg9PHyZ5K4cFv'\n",
     "filter_size = 30\n",
     "filter_num_functions = 5\n",
-    "filter_tweak = -1  # FILL THIS IN\n",
+    "filter_tweak = -1  # CHANGE\n",
     "target_h160 = decode_base58(target_address)\n",
     "target_script = p2pkh_script(target_h160)\n",
     "fee = 5000  # fee in satoshis\n",
-    "\n",
     "# connect to tbtc.programmingblockchain.com in testnet mode, logging True\n",
+    "\n",
     "# create a bloom filter using variables above\n",
+    "\n",
     "# add the h160 to the bloom filter\n",
+    "\n",
     "# complete the handshake\n",
+    "\n",
     "# send the 'filterload' message\n",
     "\n",
     "# create GetHeadersMessage with the last_block as the start_block\n",
+    "\n",
     "# send a getheaders message\n",
     "\n",
     "# wait for the headers message\n",
     "\n",
     "# initialize the GetDataMessage\n",
+    "\n",
     "# loop through the headers in the headers message\n",
+    "\n",
     "    # check that the proof of work on the block is valid\n",
+    "\n",
+    "\n",
     "    # check that this block's prev_block is the last block\n",
+    "\n",
+    "\n",
     "    # set the last block to the current hash\n",
+    "\n",
     "    # add_data(FILTERED_BLOCK_DATA_TYPE, last_block) to get_data_message\n",
+    "\n",
     "# send the getdata message\n",
     "\n",
     "# initialize prev_tx to None\n",
-    "# while prev_tx is None \n",
+    "\n",
+    "# while prev_tx is None\n",
+    "\n",
     "    # wait for the merkleblock or tx commands\n",
+    "\n",
     "    # if we have the merkleblock command\n",
+    "\n",
     "        # check that the MerkleBlock is valid\n",
+    "\n",
+    "\n",
     "    # else we have the tx command\n",
+    "\n",
     "        # set message.testnet=True\n",
+    "\n",
     "        # loop through the enumerated tx outs (enumerate(message.tx_outs))\n",
+    "\n",
     "            # if our output has the same address as our address (addr) we found it\n",
+    "\n",
     "                # we found our utxo. set prev_tx, prev_index, prev_amount\n",
+    "\n",
+    "\n",
+    "\n",
     "                # break\n",
+    "\n",
     "# create tx_in\n",
+    "\n",
     "# calculate the output amount (prev_amount - fee)\n",
+    "\n",
     "# create tx_out\n",
+    "\n",
     "# create transaction on testnet\n",
+    "\n",
     "# sign the one input we have\n",
+    "\n",
     "# serialize and hex to see what it looks like\n",
+    "\n",
     "# send this signed transaction on the network\n",
-    "# wait a sec so this message goes through to the other node sleep(1) \n",
+    "\n",
+    "# wait a sec so this message goes through to the other node sleep(1)\n",
+    "\n",
     "# now ask for this transaction from the other node\n",
     "# create a GetDataMessage\n",
+    "\n",
     "# add_data (TX_DATA_TYPE, tx_obj.hash()) to get data message\n",
+    "\n",
     "# send the GetDataMessage\n",
+    "\n",
     "# now wait for a response\n",
-    "    # yes! we got to what we wanted"
+    "\n",
+    "\n",
+    "    # yes! we got to what we wanted\n",
+    "\n"
    ]
   }
  ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 2
 }
